--- a/index.html
+++ b/index.html
@@ -1,73 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Enciende tu idea</title>
 </head>
-<body style="margin:0 auto;">
-    <table width="100%" align="center" border="0" cellpadding="0" cellsoacing="0" bgcolor="#ffffff" style="width: 100%;max-width: 600px;">
-    <!-- HEADER  -->
-        <!-- Inicio Logo -->
-        <tr>
-            <td align="center" bgcolor="#ffffff">
-                <img src="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/ETI-mailing-assets%2FPreventa-02.png?alt=media&token=4893ce72-2648-492d-b6ac-1b0943d1fccb" alt="Enciende tu idea y llevala al siguiente nivel">
-            </td>
-        </tr>
-        <!-- Fin Logo -->
-    <!--  FIN HEADER  -->
-    <!-- CONTENIDO -->
-        <tr>
-            <td>
-                <table width="100%" align="center" border="0" cellpadding="0" cellsoacing="0" >
-                    <!-- Inicio Saludo -->
-                    <tr>
-                        <td style="padding-top:80px; padding-bottom:20px; padding-left: 10px; padding-right: 10px; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 24px; color: #000000; text-align: center; line-height:26px; ">   
-                            <b>¿LISTO PARA DAR UN PASO MÁS?</b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="padding-top:0px; padding-bottom:80px; padding-left: 10px; padding-right: 10px; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 19px; color: #000000; text-align: center; line-height:26px; ">   
-                            Si quieres obtener <b style="color: #E75B3C;">resultados distintos</b>,</br> debes intentar todo aquello que nadie</br> antes ha hecho.
-                        </td>
-                    </tr>
-                    <!-- Fin Saludo -->
-                </table>
-            </td>
-        </tr>
-                    <!-- inicio imagen Main -->
-            <tr>
-                <td align="center" bgcolor="#ffffff">
-                    <img style="width: 100%;max-width: 600px;" src="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/ETI-mailing-assets%2FPreventa-03.png?alt=media&token=9a6a476a-3744-49ac-baf5-565c8394e9c3" alt="Enciende tu idea">
-                </td>
-            </tr>
-                    <!-- fin imagen Main -->
-                    <!-- incio main text -->
-      <tr>
-            <td>
-                <table width="100%" align="center" border="0" cellpadding="0" cellsoacing="0" >
-                    <tr>
-                        <td style="padding-top:80px; padding-bottom:80px; padding-left: 10px; padding-right: 10px; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 15px; color: #000000; text-align: center; line-height:26px; ">   
-                            Fortalece tus conocimientos, desarrolla nuevas</br> habilidades y adquiere herramientas de valor para</br> generar valor. Disfruta del acompañamiento de</br> expertos y las historias de éxito, con el objetivo de</br> definir tu propósito, desarrollar tu promesa y</br> objetivo de marca, así como, diseñar tu primer</br> plan de lanzamiento.  
-                        </td>
-                    </tr>
-    
-                </table>
-            </td>
-        </tr>
-                    <!-- fin main text -->
-
-<!--FIN DE CONTENIDO -->
-
-<!-- INICIO FOOTER -->
-        <tr>
-            <td align="center" bgcolor="#ffffff">
-                <img style="width: 100%;max-width: 600px;" src="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/ETI-mailing-assets%2FPreventa-04.png?alt=media&token=d4edb151-a19c-42d0-8fec-595daae457e6" alt="Aprovecha nuestro precio de preventa">
-            </td>
-        </tr>
-<!-- FIN FOOTER -->
-
-
-    </table>
+<body>
+    <p>construyending...☺️🛠⚙️</p>
 </body>
 </html>
