[UPDATE] main grid sections

--- a/index.html
+++ b/index.html
@@ -37,7 +37,30 @@
             </nav>
         </div>
     </header>
-    <section class="hero"></section>
+    <section class="hero">
+        <div class="u-wrapper">
+            <div class="main-section">
+                <div class="main-section--item__logo">
+                    <img src="./assets/logo.svg" alt="">
+                </div>
+                <div class="main-section--item__background">
+                    <!-- <img src="./assets/foto.png" alt=""> -->
+                </div>
+                <div class="main-section--item__white">
+
+                </div>
+                <div class="main-section--item__date">
+
+                </div>
+                <div class="main-section--item__description">
+
+                </div>
+                <div class="main-section--item__cta">
+
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="demo-content"></section>
     <script src="./main.js"></script>
 </body>
