[UPDATE] video & description

--- a/index.html
+++ b/index.html
@@ -50,18 +50,48 @@
 
                 </div>
                 <div class="main-section--item__date">
-
+                    <div class="item--date__container">
+                        <p>20, 27 de Marzo</p>
+                    </div>
                 </div>
                 <div class="main-section--item__description">
-
+                    <div class="item--description__container">
+                        <p>Fortalece tus conocimientos, desarrolla nuevas habilidades y adquiere herramientas de valor para llevar tu idea a otro nivel.</p>
+                    </div>
                 </div>
                 <div class="main-section--item__cta">
-
+                    <div class="cta--container">
+                        <a href="#" class="item--cta"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="demo-content"></section>
+    <section class="video">
+        <div class="video--container u-wrapper">
+            <h1 class="video--title">¿QUÉ PASARÁ?</h1>
+            <div class="video--grid">
+                <div class="border--item">
+                    
+                </div>
+                <div class="video--item">
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcHzPwVB888" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="description u-wrapper">
+        <div class="description__container">
+            <div class="description__text--container">
+                <h2>COMIENZA AHORA</h2>
+                <p>Enciende tu idea y llévala al siguiente nivel" es un taller práctico de dos sesiones, en el que podrás disfrutar del acompañamiento de expertos y las historias de éxito, con el objetivo de definir tu propósito, desarrollar tu promesa y objetivo de marca y finalmente, diseñar tu primer plan de lanzamiento. </p>
+            </div>
+            <div class="description__img--container">
+                <img src="./assets/FOTOS_Mesa de trabajo 1 copia.png" alt="">
+                <img src="./assets/FOTOS_Mesa de trabajo 1.png" alt="">
+            </div>
+        </div>
+    </section>
     <script src="./main.js"></script>
 </body>
 </html>
