--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             <h1 class="video--title">¿QUÉ PASARÁ?</h1>
             <div class="video--grid">
                 <div class="border--item">
-                    
                 </div>
                 <div class="video--item">
                     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcHzPwVB888" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -91,6 +90,9 @@
                 <img src="./assets/FOTOS_Mesa de trabajo 1.png" alt="">
             </div>
         </div>
+    </section>
+    <section class="countdown">
+
     </section>
     <script src="./main.js"></script>
 </body>
