--- a/index.html
+++ b/index.html
@@ -91,8 +91,26 @@
             </div>
         </div>
     </section>
-    <section class="countdown">
-
+    <section class="countdown ">
+        <h2></h2>
+        <div class="countdown__container">
+            <div class="countdown__item">
+                <p id="day" class="countdown__number">NA</p>
+                <p class="countdown__name">Dias</p>
+            </div>
+            <div class="countdown__item">
+                <p id="hour" class="countdown__number">NA</p>
+                <p class="countdown__name">Horas</p>
+            </div>
+            <div class="countdown__item">
+                <p id="minute" class="countdown__number">NA</p>
+                <p class="countdown__name">Minutos</p>
+            </div>
+            <div class="countdown__item">
+                <p id="second" class="countdown__number">NA</p>
+                <p class="countdown__name">Segundos</p>
+            </div>
+        </div>
     </section>
     <script src="./main.js"></script>
 </body>
