--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </section>
-    <section class="countdown ">
+    <section class="countdown">
         <h2></h2>
         <div class="countdown__container">
             <div class="countdown__item">
@@ -109,6 +109,48 @@
             <div class="countdown__item">
                 <p id="second" class="countdown__number">NA</p>
                 <p class="countdown__name">Segundos</p>
+            </div>
+        </div>
+    </section>
+    <section class="speakers u-wrapper">
+        <div class="speakers__container">
+            <h2>Speakers</h2>
+            <div class="speakers__container--item">
+                <div class="speakers__item">
+                    <div class="speakers__decoration">
+                        <img src="./assets/CIRCULO DAVID.svg" alt="">
+                    </div>
+                    <div class="speakers__item--container">
+                        <img src="./assets/DAVID.png" alt="">
+                        <h2>David Mahbub</h2>
+                        <div class="speaker__item--line"></div>
+                        <p class="speaker__item--description">Cuenta con 20 años de experiencia </br>
+                            Ha trabajado para más de 41 diferentes marcas comerciales</br>
+                            CEO y fundador de Wakkamole Inc.</br>
+                            Miembro del Forbes Business Council</p>
+                        <div class="speaker__sc--container">
+                            <img src="./assets/instagram-brands.svg" alt="">
+                            <img src="./assets/twitter-brands.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="speakers__item">
+                    <div class="speakers__item--container-right">
+                        <img src="./assets/DEN.png" alt="">
+                        <h2>Den Távara</h2>
+                        <div class="speaker__item--line"></div>
+                        <p class="speaker__item--description">Cuenta con 17 años de experiencia en la industria gastronómica, textil y sector educativo.</br>
+                            Fundadora y directora creativa de la firma Den Távara.</br>
+                            Miembro de la Nación Creativa de Lima Design Week y de Fashion Revolution Perú. </p>
+                        <div class="speaker__sc--container">
+                            <img src="./assets/instagram-brands.svg" alt="">
+                            <img src="./assets/twitter-brands.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="speakers__decoration">
+                        <img src="./assets/CUADROS DEN.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
