--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="countdown__container">
             <div class="countdown__item">
                 <p id="day" class="countdown__number">NA</p>
-                <p class="countdown__name">Dias</p>
+                <p class="countdown__name">Días</p>
             </div>
             <div class="countdown__item">
                 <p id="hour" class="countdown__number">NA</p>
@@ -120,7 +120,7 @@
                     <div class="speakers__decoration">
                         <img src="./assets/CIRCULO DAVID.svg" alt="">
                     </div>
-                    <div class="speakers__item--container">
+                    <div class="speakers__item--container lef">
                         <img src="./assets/DAVID.png" alt="">
                         <h2>David Mahbub</h2>
                         <div class="speaker__item--line"></div>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="speakers__item">
-                    <div class="speakers__item--container-right">
+                    <div class="speakers__item--container right">
                         <img src="./assets/DEN.png" alt="">
                         <h2>Den Távara</h2>
                         <div class="speaker__item--line"></div>
@@ -152,6 +152,45 @@
                     </div>
                 </div>
             </div>
+            <h2>Invitados</h2>
+            <div class="speakers__container--item">
+                <div class="speakers__item">
+                    <div class="speakers__item--container">
+                        <img src="./assets//NOE.png" alt="">
+                        <h2>Noe Bernacelli</h2>
+                        <div class="speaker__item--line"></div>
+                        <p class="speaker__item--description">Diseñador de modas de Alta Costura peruano formado en Italia.</br>
+                            Ha participado en Vancouber Fashion Week y en el Lima Fashion Week.</br>
+                            Se ha presentado en Los Ángeles, China y París.</p>
+                        <div class="speaker__sc--container">
+                            <img src="./assets/instagram-brands.svg" alt="">
+                            <img src="./assets/twitter-brands.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="speakers__item">
+                    <div class="speakers__item--container">
+                        <img src="./assets/FITO.png" alt="">
+                        <h2>Fito Espinosa</h2>
+                        <div class="speaker__item--line"></div>
+                        <p class="speaker__item--description">Artista plástico peruano con numerosos premios.</br>
+                            Ha realizado once exposiciones individuales en la galería Cecilia González, Lima. </p>
+                        <div class="speaker__sc--container">
+                            <img src="./assets/instagram-brands.svg" alt="">
+                            <img src="./assets/twitter-brands.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="tweet">
+        <div class="tweet__container">
+            <h1>“Separate thinking and execution to execute faster and think better”</h1>
+            <img src="./assets/line.svg" alt="">
+            <a href="#">
+            <p>Tweet</p>
+            </a>
         </div>
     </section>
     <script src="./main.js"></script>
