--- a/index.html
+++ b/index.html
@@ -193,6 +193,74 @@
             </a>
         </div>
     </section>
+    <section class="tickets u-wrapper">
+        <h2 class="subtitle">Tickets</h2>
+        <div class="tickets__container">
+            
+            <div class="tickets__container--item">
+                <h2>General</h2>
+                <div class="ticktes__info">
+                    <div class="info__price">
+                        <p class="info__subtitle">Precio</p>
+                        <h3 class="info__number">$100 USD</h3>
+                    </div>
+                    <div class="line"></div>
+                    <div class="tickets__date">
+                        <p class="info__subtitle">Día</p>
+                        <h3 class="info__number">20 Marzo</h3>
+                    </div>
+                </div>
+                <div class="ticket__features">
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                </div>
+                <div class="ticket__button--container">
+                    <a href="#" class="item--cta"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
+                </div>  
+            </div>
+            <div class="tickets__container--item">
+                <h2>General</h2>
+                <div class="ticktes__info">
+                    <div class="info__price">
+                        <p class="info__subtitle">Precio</p>
+                        <h3 class="info__number">$100 USD</h3>
+                    </div>
+                    <div class="line"></div>
+                    <div class="tickets__date">
+                        <p class="info__subtitle">Día</p>
+                        <h3 class="info__number">20 Marzo</h3>
+                    </div>
+                </div>
+                <div class="ticket__features">
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                    <div class="features__item">
+                        <p>1hr de asesoria 1:1 </p>
+                    </div>                    
+                </div>
+                <div class="ticket__button--container">
+                    <a href="#" class="item--cta"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
+                </div>  
+            </div>
+        </div>
+    </section>
     <script src="./main.js"></script>
 </body>
 </html>
