--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 <div class="border--item">
                 </div>
                 <div class="video--item">
-                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcHzPwVB888" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/522027634?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Enciende tu idea"></iframe>
+                    <!-- <video src="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/Eti-landing-assets%2FLanding.mp4?alt=media&token=b9d8deb0-8da6-44a6-91b8-82c398fa653a"  controls autobuffer></video> -->
+                    <!-- <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcHzPwVB888" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 </div>
             </div>
         </div>
@@ -193,6 +195,28 @@
             </a>
         </div>
     </section>
+    <section class="temario u-wrapper">
+        <h2 class="subtitle">Temario</h2>
+        <div class="temario__container">
+            <div class="temario__list">
+                <ul>
+                    <li>¿Qué es el propósito y promesa de marca?</li>
+                    <li>¿Cómo genero mi propósito y promesa de marca?</li>
+                    <li>Análisis de marcas a través de su propósito y promesa</li>
+                    <li>Ejercicio: desarrolla tu propósito y promesa</li>
+                    <li>¿Cuál es tu objetivo de negocio?</li>
+                    <li>Ejercicio: desarrolla tu objetivo de negocio</li>
+                    <li>Por qué las relaciones son importantes</li>
+                    <li>Análisis de marcas y sus relaciones</li>
+                    <li>Ejercicio: construye tu Relationship Map ®️</li>
+                    <li>Conclusiones</li>
+                </ul>
+            </div>
+            <div class="temario__img">
+                <img src="./assets/temario.png" alt="">
+            </div>
+        </div>
+    </section>
     <section class="tickets u-wrapper">
         <h2 class="subtitle">Tickets</h2>
         <div class="tickets__container">
@@ -261,6 +285,9 @@
             </div>
         </div>
     </section>
+    <footer>
+
+    </footer>
     <script src="./main.js"></script>
 </body>
 </html>
