[UPDATE] meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enciende tu idea</title>
+    <meta property="og:description" content="Fortalece tus conocimientos, desarrolla nuevas habilidades y adquiere herramientas de valor para llevar tu idea a otro nivel.">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/Eti-landing-assets%2Fogeti%20(1).png?alt=media&token=7a2b95fe-e97f-478b-8da8-fcc23e079aa3">
+    <link rel="icon" type="svg" href="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/Eti-landing-assets%2FFAVICON.svg?alt=media&token=da24d801-311a-46af-9b76-a3b99bb0775c">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&family=Marcellus&display=swap" rel="stylesheet">
