[UPDATE] logo navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container">
             <nav class="nav">
-                <a href="#container" class="logo">Logo</a>
+                <a href="#container" class="logo"><img class="img--navbar" src="./assets/logo-nav.svg" alt=""></a>
                 <ul class="nav-list">
                     <li>
                         <a href="#about" class="nav-link">Acerca de</a>
