--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="description__container">
             <div class="description__text--container">
                 <h2>COMIENZA AHORA</h2>
-                <p>Enciende tu idea y llévala al siguiente nivel" es un taller práctico de dos sesiones, en el que podrás disfrutar del acompañamiento de expertos y las historias de éxito, con el objetivo de definir tu propósito, desarrollar tu promesa y objetivo de marca y finalmente, diseñar tu primer plan de lanzamiento. </p>
+                <p>Enciende tu idea y llévala al siguiente nivel es un taller práctico de dos sesiones, en el que podrás disfrutar del acompañamiento de expertos y las historias de éxito, con el objetivo de definir tu propósito, desarrollar tu promesa y objetivo de marca y finalmente, diseñar tu primer plan de lanzamiento. </p>
             </div>
             <div class="description__img--container">
                 <img src="./assets/FOTOS_Mesa de trabajo 1 copia.png" alt="">
@@ -129,8 +129,8 @@
                         <img src="./assets/DAVID.png" alt="">
                         <h2>David Mahbub</h2>
                         <div class="speaker__item--line"></div>
-                        <p class="speaker__item--description">Cuenta con 20 años de experiencia </br>
-                            Ha trabajado para más de 41 diferentes marcas comerciales</br>
+                        <p class="speaker__item--description">Cuenta con 20 años de experiencia</br>
+                            Ha trabajado para más de 41 países y su modelo es utilizado por más de 2,500 marcas comerciales.</br>
                             CEO y fundador de Wakkamole Inc.</br>
                             Miembro del Forbes Business Council</p>
                         <div class="speaker__sc--container">
@@ -145,10 +145,9 @@
                         <img src="./assets/DEN.png" alt="">
                         <h2>Den Távara</h2>
                         <div class="speaker__item--line"></div>
-                        <p class="speaker__item--description">Cuenta con 20 años de experiencia</br>
-                            Ha trabajado para más de 41 países y su modelo es utilizado por más de 2,500 marcas comerciales.</br>
-                            CEO y fundador de Wakkamole Inc.</br>
-                            Miembro del Forbes Business Council</p>
+                        <p class="speaker__item--description">Cuenta con 17 años de experiencia en la industria gastronómica, textil y sector educativo.</br>
+                            Fundadora y directora creativa de la firma Den Távara.</br>
+                            Miembro de la Nación Creativa de Lima Design Week y de Fashion Revolution Perú. 
                         <div class="speaker__sc--container">
                             <a href="https://www.instagram.com/dentavara/?hl=es-la" target="_blank">
                                 <img src="./assets/instagram-brands.svg" alt="">
@@ -196,10 +195,15 @@
     </section>
     <section class="tweet">
         <div class="tweet__container">
-            <h1>“Separate thinking and execution to execute faster and think better”</h1>
+            <h1>Taller personalizado, con un grupo pequeño en el cual obtendrás bases sólidas para tu marca o proyecto y su plan estratégico.</h1>
             <img src="./assets/line.svg" alt="">
-            <a href="#">
-            <p>Tweet</p>
+            <a class="twitter-share-button tweet-styles"
+            href="https://twitter.com/intent/tweet"
+            data-size="large"
+            data-text="Taller personalizado, con un grupo pequeño en el cual obtendrás bases sólidas para tu marca o proyecto y su plan estratégico."
+            data-url="https://enciendetuidea.github.io/"
+            data-related="twitterapi,twitter">
+            <p>Twittear</p>
             </a>
         </div>
     </section>
@@ -230,62 +234,64 @@
         <div class="tickets__container">
             
             <div class="tickets__container--item">
-                <h2>General</h2>
+                <h2>Taller</h2>
                 <div class="ticktes__info">
                     <div class="info__price">
                         <p class="info__subtitle">Precio</p>
-                        <h3 class="info__number">$100 USD</h3>
+                        <h3 class="info__number">$150 USD</h3></br>
+                        <h3 class="info__number">S/.547</h3>
                     </div>
                     <div class="line"></div>
                     <div class="tickets__date">
-                        <p class="info__subtitle">Día</p>
-                        <h3 class="info__number">20 Marzo</h3>
+                        <p class="info__subtitle">Días</p>
+                        <h3 class="info__number">17-24 Abril</h3>
                     </div>
                 </div>
                 <div class="ticket__features">
                     <div class="features__item">
+                        <p>Taller general</p>
+                    </div>                    
+                    <div class="features__item">
+                        <p>sesiones de workshop</p>
+                    </div>                    
+                    <!-- <div class="features__item">
                         <p>1hr de asesoria 1:1 </p>
                     </div>                    
                     <div class="features__item">
                         <p>1hr de asesoria 1:1 </p>
-                    </div>                    
-                    <div class="features__item">
-                        <p>1hr de asesoria 1:1 </p>
-                    </div>                    
-                    <div class="features__item">
-                        <p>1hr de asesoria 1:1 </p>
-                    </div>                    
+                    </div>                     -->
                 </div>
                 <div class="ticket__button--container">
                     <a href="#" class="item--cta"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
                 </div>  
             </div>
             <div class="tickets__container--item">
-                <h2>General</h2>
+                <h2>Taller + Asesoría</h2>
                 <div class="ticktes__info">
                     <div class="info__price">
                         <p class="info__subtitle">Precio</p>
-                        <h3 class="info__number">$100 USD</h3>
+                        <h3 class="info__number">$250 USD</h3></br>
+                        <h3 class="info__number">S/.910 </h3>
                     </div>
                     <div class="line"></div>
                     <div class="tickets__date">
-                        <p class="info__subtitle">Día</p>
-                        <h3 class="info__number">20 Marzo</h3>
+                        <p class="info__subtitle">Días</p>
+                        <h3 class="info__number">17-24 Abril</h3>
                     </div>
                 </div>
                 <div class="ticket__features">
                     <div class="features__item">
-                        <p>1hr de asesoria 1:1 </p>
+                        <p>Taller general</p>
                     </div>                    
                     <div class="features__item">
-                        <p>1hr de asesoria 1:1 </p>
+                        <p>sesiones de workshop</p>
                     </div>                    
                     <div class="features__item">
-                        <p>1hr de asesoria 1:1 </p>
+                        <p>Asesoría personalizada de 1 hr con David Mahbub y Den Távara.</p>
                     </div>                    
-                    <div class="features__item">
+                    <!-- <div class="features__item">
                         <p>1hr de asesoria 1:1 </p>
-                    </div>                    
+                    </div>                     -->
                 </div>
                 <div class="ticket__button--container">
                     <a href="#" class="item--cta"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
@@ -296,9 +302,11 @@
     <footer>
         <div class="contacto">
             <h2>Contacto</h2>
-            <a href="mailto:nowhere@mozilla.org">correo@correo.com</a>
+            <a href="talleres@dentavara.com">talleres@dentavara.com</a></br>
+            <a href="tel:+51966748739">+51 966748739</a>
         </div>
     </footer>
     <script src="./main.js"></script>
+    <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
 </body>
 </html>
