--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <p>Taller general</p>
                     </div>                    
                     <div class="features__item">
-                        <p>sesiones de workshop</p>
+                        <p>Sesiones de workshop</p>
                     </div>                    
                     <!-- <div class="features__item">
                         <p>1hr de asesoria 1:1 </p>
